# crc32fix

./: Cargo.toml  README.md  cli.yml
src/: lib.rs  main.rs
